fixed: visibility of the error message box when there is not error

--- a/src/app/user/pages/take-order/take-order.component.css
+++ b/src/app/user/pages/take-order/take-order.component.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+
 }
 
 .productos {
@@ -66,6 +67,14 @@
     background-color: var(--redHard);
 
     padding: 0.5rem;
+}
+
+.hidden {
+    visibility: hidden !important;
+}
+
+.visible {
+    visibility: visible !important;
 }
 
 .mat-raised-button {
